Batch update of generated files

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,33 @@
     */
     const newsData = [
   {
+    "title": "Nhà trường phủ nhận việc học sinh phải đóng quỹ hội trại 5 triệu đồng",
+    "content": "Hiệu trưởng Trường THPT Phan Châu Trinh tại Đà Nẵng đã phủ nhận thông tin cho rằng học sinh phải đóng quỹ hội trại 5 triệu đồng, khẳng định đây là tin đồn không chính xác. Ông Nguyễn Quang Hưng cho biết trường chỉ tổ chức hội trại cho khối 11 và mọi chi phí sẽ được thống nhất với phụ huynh. Ông cũng nhấn mạnh rằng không có đòi hỏi phải thuê biên đạo cho các hoạt động văn nghệ của trường.",
+    "link": "https://dantri.com.vn/giao-duc/nha-truong-phu-nhan-viec-hoc-sinh-phai-dong-quy-hoi-trai-5-trieu-dong-20250320185132628.htm",
+    "cat": "giao-duc",
+    "positivity": 8,
+    "importance": 6,
+    "question": "Nhà trường có yêu cầu học sinh đóng quỹ hội trại 5 triệu đồng không?",
+    "answers": [
+      {
+        "text": "Không, nhà trường không yêu cầu đóng quỹ này.",
+        "correct": true
+      },
+      {
+        "text": "Có, học sinh phải đóng quỹ 5 triệu đồng.",
+        "correct": false
+      },
+      {
+        "text": "Nhà trường đang xem xét việc thu quỹ hội trại.",
+        "correct": false
+      },
+      {
+        "text": "Học sinh phải đóng quỹ nhưng số tiền thấp hơn.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "'Nổ' thực phẩm chức năng như thuốc chữa bệnh",
     "content": "Bài viết chỉ ra tình trạng người tiêu dùng bị lừa đảo bởi quảng cáo thổi phồng công dụng của thực phẩm chức năng, khiến họ nhầm lẫn giữa thực phẩm chức năng và thuốc chữa bệnh. Nhiều trường hợp đã dẫn đến hậu quả nghiêm trọng cho sức khỏe, như ngộ độc hoặc vô sinh do sử dụng sản phẩm không rõ nguồn gốc. Bộ Y tế và các chuyên gia khuyến cáo người dân cần thận trọng khi sử dụng thực phẩm chức năng, chỉ nên dùng khi cần thiết và tham khảo ý kiến chuyên gia trước khi sử dụng.",
     "link": "https://vnexpress.net/no-thuc-pham-chuc-nang-nhu-thuoc-chua-benh-4862172.html",
@@ -2906,37 +2933,6 @@
     ]
   },
   {
-    "title": "Nguyên nhân gây tăng đường huyết sau ăn",
-    "content": "Sau khi ăn, lượng đường huyết tăng lên là điều bình thường do cơ thể phân hủy carbohydrate thành glucose. Tuy nhiên, việc ăn nhiều tinh bột, thực phẩm chế biến sẵn và không kiểm soát khẩu phần có thể dẫn đến tăng đường huyết đột ngột. Người bị tiểu đường cần chú ý đến thói quen ăn uống như chia nhỏ bữa ăn, chọn thực phẩm giàu chất xơ và kiểm soát lượng carbohydrate để duy trì mức đường huyết ổn định.",
-    "link": "https://vnexpress.net/nguyen-nhan-gay-tang-duong-huyet-sau-an-4863701.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Nguyên nhân nào gây tăng đường huyết sau khi ăn?",
-    "answers": [
-      {
-        "text": "Ăn quá nhiều tinh bột và thực phẩm chế biến sẵn",
-        "correct": true
-      },
-      {
-        "text": "Uống nước ngọt sau bữa ăn",
-        "correct": false
-      },
-      {
-        "text": "Bỏ bữa sáng",
-        "correct": false
-      },
-      {
-        "text": "Ăn thực phẩm nóng ngay sau khi nấu",
-        "correct": false
-      },
-      {
-        "text": "Vận động ngay sau khi ăn",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Học sinh ứng dụng công nghệ khai thác \"kho vàng\" dưới tán rừng",
     "content": "Nhóm học sinh tại Nghệ An đã phát triển một dự án khởi nghiệp ứng dụng công nghệ Blockchain và tiêu chuẩn GACP-WHO để khai thác nguồn dược liệu phong phú dưới tán rừng, được xem như \"kho vàng\" chưa được khai thác. Dự án không chỉ giúp minh bạch nguồn gốc dược liệu mà còn nâng cao giá trị sản phẩm và tạo sinh kế bền vững cho cộng đồng dân tộc thiểu số. Nhóm học sinh đã xuất sắc vượt qua vòng bán kết trong cuộc thi \"Học sinh, sinh viên với ý tưởng khởi nghiệp\" của Bộ Giáo dục và Đào tạo, góp phần bảo vệ môi trường và nâng cao nhận thức xã hội.",
     "link": "https://dantri.com.vn/giao-duc/hoc-sinh-ung-dung-cong-nghe-khai-thac-kho-vang-duoi-tan-rung-20250320080413977.htm",
@@ -2963,6 +2959,37 @@
       },
       {
         "text": "Cloud Computing",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Nguyên nhân gây tăng đường huyết sau ăn",
+    "content": "Sau khi ăn, lượng đường huyết tăng lên là điều bình thường do cơ thể phân hủy carbohydrate thành glucose. Tuy nhiên, việc ăn nhiều tinh bột, thực phẩm chế biến sẵn và không kiểm soát khẩu phần có thể dẫn đến tăng đường huyết đột ngột. Người bị tiểu đường cần chú ý đến thói quen ăn uống như chia nhỏ bữa ăn, chọn thực phẩm giàu chất xơ và kiểm soát lượng carbohydrate để duy trì mức đường huyết ổn định.",
+    "link": "https://vnexpress.net/nguyen-nhan-gay-tang-duong-huyet-sau-an-4863701.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Nguyên nhân nào gây tăng đường huyết sau khi ăn?",
+    "answers": [
+      {
+        "text": "Ăn quá nhiều tinh bột và thực phẩm chế biến sẵn",
+        "correct": true
+      },
+      {
+        "text": "Uống nước ngọt sau bữa ăn",
+        "correct": false
+      },
+      {
+        "text": "Bỏ bữa sáng",
+        "correct": false
+      },
+      {
+        "text": "Ăn thực phẩm nóng ngay sau khi nấu",
+        "correct": false
+      },
+      {
+        "text": "Vận động ngay sau khi ăn",
         "correct": false
       }
     ]
@@ -4764,37 +4791,6 @@
     ]
   },
   {
-    "title": "Công cụ giúp phụ huynh xác định năng lực của con với học sinh THPT toàn quốc",
-    "content": "Công cụ SchoolRank giúp phụ huynh xác định năng lực học tập của con so với học sinh THPT trên toàn quốc một cách khách quan. Phụ huynh có thể nhập điểm học tập để nhận kết quả xếp hạng, từ đó có cái nhìn tổng thể về năng lực của con em mình. SchoolRank ra mắt từ năm 2020, sử dụng phương pháp luận ATAR của Úc và cho phép phụ huynh lập kế hoạch học tập hiệu quả hơn, đồng thời hỗ trợ trong quá trình tuyển sinh đại học.",
-    "link": "https://dantri.com.vn/giao-duc/cong-cu-giup-phu-huynh-xac-dinh-nang-luc-cua-con-voi-hoc-sinh-thpt-toan-quoc-20250319181119197.htm",
-    "cat": "giao-duc",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Công cụ nào giúp phụ huynh xác định năng lực học tập của con so với học sinh THPT toàn quốc?",
-    "answers": [
-      {
-        "text": "SchoolRank",
-        "correct": true
-      },
-      {
-        "text": "EduRank",
-        "correct": false
-      },
-      {
-        "text": "StudentAnalyzer",
-        "correct": false
-      },
-      {
-        "text": "LearnTracker",
-        "correct": false
-      },
-      {
-        "text": "ClassCompare",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Trẻ em thời đại số cần trưởng thành qua trải nghiệm",
     "content": "Bài viết nhấn mạnh sự cần thiết cho trẻ em trong thời đại số phải trải nghiệm thực tế để phát triển toàn diện. Việc lạm dụng công nghệ có thể dẫn đến thiếu hụt kỹ năng sống và giao tiếp. Trẻ em cần được khuyến khích tham gia vào các hoạt động ngoài trời và trải nghiệm thực tế để rèn luyện bản lĩnh, sự tự tin và khả năng thích nghi. Chương trình \"ILA Summer Never Ends 2025\" được giới thiệu như một giải pháp để trẻ em vừa học vừa chơi, phát triển kỹ năng trong môi trường quốc tế.",
     "link": "https://dantri.com.vn/giao-duc/tre-em-thoi-dai-so-can-truong-thanh-qua-trai-nghiem-20250319230823588.htm",
@@ -4852,6 +4848,37 @@
       },
       {
         "text": "Đau đầu liên tục",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Công cụ giúp phụ huynh xác định năng lực của con với học sinh THPT toàn quốc",
+    "content": "Công cụ SchoolRank giúp phụ huynh xác định năng lực học tập của con so với học sinh THPT trên toàn quốc một cách khách quan. Phụ huynh có thể nhập điểm học tập để nhận kết quả xếp hạng, từ đó có cái nhìn tổng thể về năng lực của con em mình. SchoolRank ra mắt từ năm 2020, sử dụng phương pháp luận ATAR của Úc và cho phép phụ huynh lập kế hoạch học tập hiệu quả hơn, đồng thời hỗ trợ trong quá trình tuyển sinh đại học.",
+    "link": "https://dantri.com.vn/giao-duc/cong-cu-giup-phu-huynh-xac-dinh-nang-luc-cua-con-voi-hoc-sinh-thpt-toan-quoc-20250319181119197.htm",
+    "cat": "giao-duc",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Công cụ nào giúp phụ huynh xác định năng lực học tập của con so với học sinh THPT toàn quốc?",
+    "answers": [
+      {
+        "text": "SchoolRank",
+        "correct": true
+      },
+      {
+        "text": "EduRank",
+        "correct": false
+      },
+      {
+        "text": "StudentAnalyzer",
+        "correct": false
+      },
+      {
+        "text": "LearnTracker",
+        "correct": false
+      },
+      {
+        "text": "ClassCompare",
         "correct": false
       }
     ]
@@ -5201,6 +5228,33 @@
     ]
   },
   {
+    "title": "Khai mạc Liên hoan Truyền hình toàn quốc lần thứ 42",
+    "content": "Tối 19/3, Liên hoan Truyền hình toàn quốc lần thứ 42 đã chính thức khai mạc tại thành phố Quy Nhơn, tỉnh Bình Định, quy tụ gần 100 đơn vị truyền hình và báo chí với 734 tác phẩm dự thi. Sự kiện này không chỉ tôn vinh các tác phẩm truyền hình xuất sắc mà còn tạo cơ hội cho các nhà báo giao lưu và nâng cao nghiệp vụ. Ông Phạm Anh Tuấn, Chủ tịch UBND tỉnh Bình Định, nhấn mạnh đây là dịp quảng bá hình ảnh văn hóa và tiềm năng phát triển của tỉnh. Liên hoan cũng bao gồm nhiều hoạt động bên lề và chương trình thiện nguyện, thể hiện tinh thần trách nhiệm xã hội của những người làm truyền hình.",
+    "link": "https://dantri.com.vn/giai-tri/khai-mac-lien-hoan-truyen-hinh-toan-quoc-lan-thu-42-20250320101242970.htm",
+    "cat": "giai-tri",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Liên hoan Truyền hình toàn quốc lần thứ 42 được tổ chức ở đâu và khi nào?",
+    "answers": [
+      {
+        "text": "Quy Nhơn, vào ngày 19/3",
+        "correct": true
+      },
+      {
+        "text": "Hà Nội, vào ngày 19/3",
+        "correct": false
+      },
+      {
+        "text": "Đà Nẵng, vào ngày 20/3",
+        "correct": false
+      },
+      {
+        "text": "Hải Phòng, vào ngày 19/3",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Học ngành nào để 4-5 năm nữa vẫn có việc làm?",
     "content": "Bài viết đề cập đến nỗi lo lắng của học sinh và phụ huynh về việc chọn ngành học trong bối cảnh công nghệ AI đang phát triển mạnh mẽ. Nhiều ngành như tài chính, ngân hàng và truyền thông đối mặt với nguy cơ bị thay thế bởi AI, khiến các em lo ngại về cơ hội việc làm trong tương lai. Tuy nhiên, các chuyên gia khẳng định rằng công nghệ sẽ không hoàn toàn thay thế con người mà còn tạo ra nhiều cơ hội mới, và người học cần không ngừng cải thiện kỹ năng để thích ứng với thị trường lao động.",
     "link": "https://dantri.com.vn/giao-duc/hoc-nganh-nao-de-4-5-nam-nua-van-co-viec-lam-20250319213313023.htm",
@@ -5227,33 +5281,6 @@
       },
       {
         "text": "Y tế và công nghệ sinh học",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Khai mạc Liên hoan Truyền hình toàn quốc lần thứ 42",
-    "content": "Tối 19/3, Liên hoan Truyền hình toàn quốc lần thứ 42 đã chính thức khai mạc tại thành phố Quy Nhơn, tỉnh Bình Định, quy tụ gần 100 đơn vị truyền hình và báo chí với 734 tác phẩm dự thi. Sự kiện này không chỉ tôn vinh các tác phẩm truyền hình xuất sắc mà còn tạo cơ hội cho các nhà báo giao lưu và nâng cao nghiệp vụ. Ông Phạm Anh Tuấn, Chủ tịch UBND tỉnh Bình Định, nhấn mạnh đây là dịp quảng bá hình ảnh văn hóa và tiềm năng phát triển của tỉnh. Liên hoan cũng bao gồm nhiều hoạt động bên lề và chương trình thiện nguyện, thể hiện tinh thần trách nhiệm xã hội của những người làm truyền hình.",
-    "link": "https://dantri.com.vn/giai-tri/khai-mac-lien-hoan-truyen-hinh-toan-quoc-lan-thu-42-20250320101242970.htm",
-    "cat": "giai-tri",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Liên hoan Truyền hình toàn quốc lần thứ 42 được tổ chức ở đâu và khi nào?",
-    "answers": [
-      {
-        "text": "Quy Nhơn, vào ngày 19/3",
-        "correct": true
-      },
-      {
-        "text": "Hà Nội, vào ngày 19/3",
-        "correct": false
-      },
-      {
-        "text": "Đà Nẵng, vào ngày 20/3",
-        "correct": false
-      },
-      {
-        "text": "Hải Phòng, vào ngày 19/3",
         "correct": false
       }
     ]
@@ -5501,37 +5528,6 @@
       },
       {
         "text": "Nếu có điểm số cao hơn Australia.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "H'Hen Niê lấy chồng nhiếp ảnh gia: Được cưng chiều, lý do vẫn chặn Facebook",
-    "content": "H'Hen Niê vừa kết hôn với nhiếp ảnh gia Tuấn Khôi trong một lễ cưới giản dị tại Đắk Lắk. Sau khi kết hôn, cả hai thường xuyên chia sẻ những khoảnh khắc hạnh phúc và bình dị trong cuộc sống. Tuy nhiên, H'Hen Niê đã chặn tài khoản mạng xã hội của chồng, lý do cô cho biết là muốn có sự riêng tư và không liên quan đến tình cảm giữa họ. Họ vẫn duy trì tình cảm tốt đẹp và thường xuyên tham gia các hoạt động thể thao và từ thiện cùng nhau.",
-    "link": "https://dantri.com.vn/giai-tri/hhen-nie-lay-chong-nhiep-anh-gia-duoc-cung-chieu-ly-do-van-chan-facebook-20250318215111874.htm",
-    "cat": "giai-tri",
-    "positivity": 9,
-    "importance": 7,
-    "question": "H'Hen Niê đã kết hôn với ai?",
-    "answers": [
-      {
-        "text": "Tuấn Khôi",
-        "correct": true
-      },
-      {
-        "text": "Một doanh nhân",
-        "correct": false
-      },
-      {
-        "text": "Một diễn viên",
-        "correct": false
-      },
-      {
-        "text": "Một ca sĩ",
-        "correct": false
-      },
-      {
-        "text": "Một người mẫu",
         "correct": false
       }
     ]
