Batch update of generated files

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,28 +81,28 @@
     // Example JSON array with news objects
     const newsData = [
   {
-    "title": "Những 'kẻ thù' âm thầm gây hại sức khỏe dân văn phòng",
-    "content": "Bài viết đề cập đến những bệnh lý mà nhân viên văn phòng thường gặp phải do đặc thù công việc ít vận động và ngồi lâu. Các vấn đề sức khỏe như thừa cân, đau cổ vai gáy, đau lưng, trĩ, bệnh lý về mắt và viêm xoang được nhấn mạnh là những 'kẻ thù' âm thầm gây hại. Bác sĩ Trần Đức Cảnh khuyến cáo rằng việc duy trì chế độ ăn uống hợp lý, tập thể dục và thư giãn là cần thiết để giảm thiểu những rủi ro này.",
-    "link": "https://vnexpress.net/nhung-ke-thu-am-tham-gay-hai-suc-khoe-dan-van-phong-4862276.html",
-    "cat": "suc-khoe",
-    "positivity": 5,
-    "importance": 7,
-    "question": "Nhân viên văn phòng dễ mắc những bệnh gì?",
+    "title": "Nga đánh thẳng \"gót chân Achilles\", canh bạc Kursk của Ukraine dần ngã ngũ",
+    "content": "Chiến dịch Kursk của Ukraine đang dần đi đến hồi kết khi Nga liên tục tấn công vào điểm yếu của Ukraine, khiến lực lượng Kiev phải rút lui khỏi nhiều khu vực. Quân đội Nga đã giành lại quyền kiểm soát nhiều thị trấn ở tỉnh Kursk và tuyên bố rằng hàng nghìn binh sĩ Ukraine đã hết đường lui. Tổng thống Nga Vladimir Putin nhấn mạnh rằng quân đội Ukraine chỉ còn hai lựa chọn: đầu hàng hoặc chết. Trong khi đó, các chỉ huy Ukraine thừa nhận tình hình khó khăn và đang tìm cách bảo toàn lực lượng.",
+    "link": "https://dantri.com.vn/the-gioi/nga-danh-thang-got-chan-achilles-canh-bac-kursk-cua-ukraine-dan-nga-ngu-20250320210513801.htm",
+    "cat": "the-gioi",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Tại sao chiến dịch Kursk của Ukraine đang gặp khó khăn?",
     "answers": [
       {
-        "text": "Thừa cân, đau cổ vai gáy, đau lưng",
+        "text": "Nga tấn công vào điểm yếu của Ukraine và giành lại quyền kiểm soát nhiều khu vực.",
         "correct": true
       },
       {
-        "text": "Tiểu đường, ung thư, tim mạch",
+        "text": "Ukraine không nhận được đủ viện trợ từ phương Tây.",
         "correct": false
       },
       {
-        "text": "Cúm, cảm lạnh, đau đầu",
+        "text": "Lực lượng Ukraine thiếu trang thiết bị hiện đại.",
         "correct": false
       },
       {
-        "text": "Bệnh về da, bệnh về xương khớp",
+        "text": "Nga đã hoàn thành kế hoạch quân sự của mình.",
         "correct": false
       }
     ]
@@ -139,6 +139,37 @@
     ]
   },
   {
+    "title": "Cán bộ bị tinh giản tập quen môi trường tư nhân",
+    "content": "Chị Nguyễn Thanh Tuyền, một viên chức nhà nước tại TP HCM, đã quyết định nghỉ việc để chuyển sang làm việc tại khu vực tư nhân sau khi cơ quan cô thực hiện Nghị quyết 18 về tinh gọn bộ máy. Tuy nhiên, chị cảm thấy bất ngờ vì yêu cầu tuyển dụng trong khu vực tư nhân thay đổi nhanh chóng và khó khăn hơn so với trước. Chị đã chủ động học hỏi và nâng cao kỹ năng để thích ứng với thị trường lao động mới, đồng thời nhận thấy rằng sự ổn định trong công việc không còn như trước. Chị Bùi Xuân Triều, một cựu viên chức khác, cũng chia sẻ rằng sự chuyển mình này tạo ra cơ hội mới và thách thức cho những người rời bỏ khu vực công.",
+    "link": "https://vnexpress.net/can-bo-bi-tinh-gian-tap-quen-moi-truong-tu-nhan-4863487.html",
+    "cat": "thoi-su",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Cán bộ nhà nước cần chuẩn bị gì khi chuyển sang làm việc ở khu vực tư nhân?",
+    "answers": [
+      {
+        "text": "Nâng cao kỹ năng và chuẩn bị tâm lý",
+        "correct": true
+      },
+      {
+        "text": "Chỉ cần gửi hồ sơ ứng tuyển",
+        "correct": false
+      },
+      {
+        "text": "Không cần học thêm gì",
+        "correct": false
+      },
+      {
+        "text": "Giữ nguyên tư duy làm việc như tại nhà nước",
+        "correct": false
+      },
+      {
+        "text": "Từ bỏ mọi cơ hội trong công việc",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Bài học của anh kỹ sư trung niên bất ngờ bị sa thải",
     "content": "Bài viết kể về hành trình của Trần Tuấn, một kỹ sư 45 tuổi bị sa thải đột ngột khỏi công ty mà anh đã gắn bó nhiều năm. Sau cú sốc, anh đã tự tin nhìn nhận lại sự nghiệp, nâng cao kỹ năng, và điều chỉnh CV để tìm kiếm cơ hội mới. Cuối cùng, anh đã tìm được công việc lý tưởng tại một tập đoàn lớn, đồng thời thay đổi tư duy về việc gắn bó với một công ty lâu dài. Qua câu chuyện của mình, anh khuyến khích mọi người hãy tự tin và không ngừng học hỏi để nắm bắt cơ hội.",
     "link": "https://vnexpress.net/bai-hoc-cua-anh-ky-su-trung-nien-bat-ngo-bi-sa-thai-4863032.html",
@@ -166,32 +197,28 @@
     ]
   },
   {
-    "title": "Cán bộ bị tinh giản tập quen môi trường tư nhân",
-    "content": "Chị Nguyễn Thanh Tuyền, một viên chức nhà nước tại TP HCM, đã quyết định nghỉ việc để chuyển sang làm việc tại khu vực tư nhân sau khi cơ quan cô thực hiện Nghị quyết 18 về tinh gọn bộ máy. Tuy nhiên, chị cảm thấy bất ngờ vì yêu cầu tuyển dụng trong khu vực tư nhân thay đổi nhanh chóng và khó khăn hơn so với trước. Chị đã chủ động học hỏi và nâng cao kỹ năng để thích ứng với thị trường lao động mới, đồng thời nhận thấy rằng sự ổn định trong công việc không còn như trước. Chị Bùi Xuân Triều, một cựu viên chức khác, cũng chia sẻ rằng sự chuyển mình này tạo ra cơ hội mới và thách thức cho những người rời bỏ khu vực công.",
-    "link": "https://vnexpress.net/can-bo-bi-tinh-gian-tap-quen-moi-truong-tu-nhan-4863487.html",
-    "cat": "thoi-su",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Cán bộ nhà nước cần chuẩn bị gì khi chuyển sang làm việc ở khu vực tư nhân?",
+    "title": "Những 'kẻ thù' âm thầm gây hại sức khỏe dân văn phòng",
+    "content": "Bài viết đề cập đến những bệnh lý mà nhân viên văn phòng thường gặp phải do đặc thù công việc ít vận động và ngồi lâu. Các vấn đề sức khỏe như thừa cân, đau cổ vai gáy, đau lưng, trĩ, bệnh lý về mắt và viêm xoang được nhấn mạnh là những 'kẻ thù' âm thầm gây hại. Bác sĩ Trần Đức Cảnh khuyến cáo rằng việc duy trì chế độ ăn uống hợp lý, tập thể dục và thư giãn là cần thiết để giảm thiểu những rủi ro này.",
+    "link": "https://vnexpress.net/nhung-ke-thu-am-tham-gay-hai-suc-khoe-dan-van-phong-4862276.html",
+    "cat": "suc-khoe",
+    "positivity": 5,
+    "importance": 7,
+    "question": "Nhân viên văn phòng dễ mắc những bệnh gì?",
     "answers": [
       {
-        "text": "Nâng cao kỹ năng và chuẩn bị tâm lý",
+        "text": "Thừa cân, đau cổ vai gáy, đau lưng",
         "correct": true
       },
       {
-        "text": "Chỉ cần gửi hồ sơ ứng tuyển",
+        "text": "Tiểu đường, ung thư, tim mạch",
         "correct": false
       },
       {
-        "text": "Không cần học thêm gì",
+        "text": "Cúm, cảm lạnh, đau đầu",
         "correct": false
       },
       {
-        "text": "Giữ nguyên tư duy làm việc như tại nhà nước",
-        "correct": false
-      },
-      {
-        "text": "Từ bỏ mọi cơ hội trong công việc",
+        "text": "Bệnh về da, bệnh về xương khớp",
         "correct": false
       }
     ]
