--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,37 @@
     */
     const newsData = [
   {
+    "title": "Hyundai và Kia tăng công nghệ, nạn trộm cắp ôtô giảm mạnh",
+    "content": "Hyundai và Kia đã tăng cường công nghệ chống trộm cho xe của mình, dẫn đến việc nạn trộm cắp ôtô giảm mạnh nhất trong 40 năm qua. Mặc dù xe của hai hãng vẫn nằm trong top 5 mẫu xe bị đánh cắp, nhưng số vụ trộm đã giảm khoảng 37,5% trong năm 2024. Các biện pháp chống trộm như nâng cấp phần mềm đã được áp dụng cho 68% số xe dễ bị tấn công, góp phần tạo ra sự thay đổi tích cực trong tình hình trộm cắp ôtô tại Mỹ.",
+    "link": "https://vnexpress.net/hyundai-va-kia-tang-cong-nghe-nan-trom-cap-oto-giam-manh-4863568.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Tại sao nạn trộm cắp ôtô của Hyundai và Kia giảm mạnh?",
+    "answers": [
+      {
+        "text": "Do tăng cường biện pháp chống trộm",
+        "correct": true
+      },
+      {
+        "text": "Vì giá xe giảm",
+        "correct": false
+      },
+      {
+        "text": "Do các mẫu xe mới ra mắt",
+        "correct": false
+      },
+      {
+        "text": "Vì luật pháp nghiêm ngặt hơn",
+        "correct": false
+      },
+      {
+        "text": "Do người tiêu dùng ít mua xe hơn",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Nga đánh thẳng \"gót chân Achilles\", canh bạc Kursk của Ukraine dần ngã ngũ",
     "content": "Chiến dịch Kursk của Ukraine đang dần đi đến hồi kết khi Nga liên tục tấn công vào điểm yếu của Ukraine, khiến lực lượng Kiev phải rút lui khỏi nhiều khu vực. Quân đội Nga đã giành lại quyền kiểm soát nhiều thị trấn ở tỉnh Kursk và tuyên bố rằng hàng nghìn binh sĩ Ukraine đã hết đường lui. Tổng thống Nga Vladimir Putin nhấn mạnh rằng quân đội Ukraine chỉ còn hai lựa chọn: đầu hàng hoặc chết. Trong khi đó, các chỉ huy Ukraine thừa nhận tình hình khó khăn và đang tìm cách bảo toàn lực lượng.",
     "link": "https://dantri.com.vn/the-gioi/nga-danh-thang-got-chan-achilles-canh-bac-kursk-cua-ukraine-dan-nga-ngu-20250320210513801.htm",
@@ -493,6 +524,60 @@
       },
       {
         "text": "Nga đã hoàn thành kế hoạch quân sự của mình.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Bài học của anh kỹ sư trung niên bất ngờ bị sa thải",
+    "content": "Bài viết kể về hành trình của Trần Tuấn, một kỹ sư 45 tuổi bị sa thải đột ngột khỏi công ty mà anh đã gắn bó nhiều năm. Sau cú sốc, anh đã tự tin nhìn nhận lại sự nghiệp, nâng cao kỹ năng, và điều chỉnh CV để tìm kiếm cơ hội mới. Cuối cùng, anh đã tìm được công việc lý tưởng tại một tập đoàn lớn, đồng thời thay đổi tư duy về việc gắn bó với một công ty lâu dài. Qua câu chuyện của mình, anh khuyến khích mọi người hãy tự tin và không ngừng học hỏi để nắm bắt cơ hội.",
+    "link": "https://vnexpress.net/bai-hoc-cua-anh-ky-su-trung-nien-bat-ngo-bi-sa-thai-4863032.html",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Bài học nào Trần Tuấn rút ra sau khi bị sa thải?",
+    "answers": [
+      {
+        "text": "Hãy chủ động thay đổi nếu thấy môi trường không phù hợp.",
+        "correct": true
+      },
+      {
+        "text": "Luôn gắn bó với một công ty suốt đời.",
+        "correct": false
+      },
+      {
+        "text": "Không cần học thêm kỹ năng mới.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ tìm việc khi cần thiết.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Những 'kẻ thù' âm thầm gây hại sức khỏe dân văn phòng",
+    "content": "Bài viết đề cập đến những bệnh lý mà nhân viên văn phòng thường gặp phải do đặc thù công việc ít vận động và ngồi lâu. Các vấn đề sức khỏe như thừa cân, đau cổ vai gáy, đau lưng, trĩ, bệnh lý về mắt và viêm xoang được nhấn mạnh là những 'kẻ thù' âm thầm gây hại. Bác sĩ Trần Đức Cảnh khuyến cáo rằng việc duy trì chế độ ăn uống hợp lý, tập thể dục và thư giãn là cần thiết để giảm thiểu những rủi ro này.",
+    "link": "https://vnexpress.net/nhung-ke-thu-am-tham-gay-hai-suc-khoe-dan-van-phong-4862276.html",
+    "cat": "suc-khoe",
+    "positivity": 5,
+    "importance": 7,
+    "question": "Nhân viên văn phòng dễ mắc những bệnh gì?",
+    "answers": [
+      {
+        "text": "Thừa cân, đau cổ vai gáy, đau lưng",
+        "correct": true
+      },
+      {
+        "text": "Tiểu đường, ung thư, tim mạch",
+        "correct": false
+      },
+      {
+        "text": "Cúm, cảm lạnh, đau đầu",
+        "correct": false
+      },
+      {
+        "text": "Bệnh về da, bệnh về xương khớp",
         "correct": false
       }
     ]
@@ -555,60 +640,6 @@
       },
       {
         "text": "Từ bỏ mọi cơ hội trong công việc",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Bài học của anh kỹ sư trung niên bất ngờ bị sa thải",
-    "content": "Bài viết kể về hành trình của Trần Tuấn, một kỹ sư 45 tuổi bị sa thải đột ngột khỏi công ty mà anh đã gắn bó nhiều năm. Sau cú sốc, anh đã tự tin nhìn nhận lại sự nghiệp, nâng cao kỹ năng, và điều chỉnh CV để tìm kiếm cơ hội mới. Cuối cùng, anh đã tìm được công việc lý tưởng tại một tập đoàn lớn, đồng thời thay đổi tư duy về việc gắn bó với một công ty lâu dài. Qua câu chuyện của mình, anh khuyến khích mọi người hãy tự tin và không ngừng học hỏi để nắm bắt cơ hội.",
-    "link": "https://vnexpress.net/bai-hoc-cua-anh-ky-su-trung-nien-bat-ngo-bi-sa-thai-4863032.html",
-    "cat": "kinh-doanh",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Bài học nào Trần Tuấn rút ra sau khi bị sa thải?",
-    "answers": [
-      {
-        "text": "Hãy chủ động thay đổi nếu thấy môi trường không phù hợp.",
-        "correct": true
-      },
-      {
-        "text": "Luôn gắn bó với một công ty suốt đời.",
-        "correct": false
-      },
-      {
-        "text": "Không cần học thêm kỹ năng mới.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ tìm việc khi cần thiết.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Những 'kẻ thù' âm thầm gây hại sức khỏe dân văn phòng",
-    "content": "Bài viết đề cập đến những bệnh lý mà nhân viên văn phòng thường gặp phải do đặc thù công việc ít vận động và ngồi lâu. Các vấn đề sức khỏe như thừa cân, đau cổ vai gáy, đau lưng, trĩ, bệnh lý về mắt và viêm xoang được nhấn mạnh là những 'kẻ thù' âm thầm gây hại. Bác sĩ Trần Đức Cảnh khuyến cáo rằng việc duy trì chế độ ăn uống hợp lý, tập thể dục và thư giãn là cần thiết để giảm thiểu những rủi ro này.",
-    "link": "https://vnexpress.net/nhung-ke-thu-am-tham-gay-hai-suc-khoe-dan-van-phong-4862276.html",
-    "cat": "suc-khoe",
-    "positivity": 5,
-    "importance": 7,
-    "question": "Nhân viên văn phòng dễ mắc những bệnh gì?",
-    "answers": [
-      {
-        "text": "Thừa cân, đau cổ vai gáy, đau lưng",
-        "correct": true
-      },
-      {
-        "text": "Tiểu đường, ung thư, tim mạch",
-        "correct": false
-      },
-      {
-        "text": "Cúm, cảm lạnh, đau đầu",
-        "correct": false
-      },
-      {
-        "text": "Bệnh về da, bệnh về xương khớp",
         "correct": false
       }
     ]
@@ -2887,28 +2918,28 @@
     ]
   },
   {
-    "title": "10 năm không con do dính buồng tử cung",
-    "content": "Chị Hà Thu, 33 tuổi, đã trải qua 10 năm không có con do dính buồng tử cung sau nhiều lần sảy thai và tác động phẫu thuật. Sau khi được chẩn đoán vô sinh thứ phát do dính buồng tử cung và tắc vòi trứng, chị đã trải qua ca phẫu thuật nội soi để cắt dính và điều trị. Cuối cùng, nhờ thụ tinh ống nghiệm, chị đã sinh con gái đầu lòng sau nhiều nỗ lực và gặp nhiều khó khăn trong thai kỳ.",
-    "link": "https://vnexpress.net/10-nam-khong-con-do-dinh-buong-tu-cung-4863585.html",
-    "cat": "suc-khoe",
+    "title": "Vietjet khai trương hai đường bay mới đến Ấn Độ",
+    "content": "Vietjet vừa khai trương hai đường bay mới đến Ấn Độ, cụ thể là từ TP.HCM đến Hyderabad và Bengaluru, nhằm đáp ứng nhu cầu di chuyển của người dân và du khách. Đường bay đến Hyderabad bắt đầu từ ngày 18-3-2025 với 2 chuyến khứ hồi mỗi tuần, trong khi đường bay đến Bengaluru khai trương từ 19-3-2025 với 3 chuyến khứ hồi mỗi tuần. Với sự kiện này, Vietjet nâng tổng số đường bay giữa Việt Nam và Ấn Độ lên 10, góp phần thúc đẩy giao lưu văn hóa và du lịch giữa hai nước.",
+    "link": "https://tuoitre.vn/vietjet-khai-truong-hai-duong-bay-moi-den-an-do-20250320145514184.htm",
+    "cat": "du-lich",
     "positivity": 8,
-    "importance": 9,
-    "question": "Chị Hà Thu đã phải đối mặt với vấn đề gì trong suốt 10 năm không có con?",
+    "importance": 7,
+    "question": "Vietjet vừa khai trương đường bay mới nào đến Ấn Độ?",
     "answers": [
       {
-        "text": "Dính buồng tử cung",
+        "text": "TP.HCM - Hyderabad và TP.HCM - Bengaluru",
         "correct": true
       },
       {
-        "text": "Vô sinh do tuổi tác",
+        "text": "TP.HCM - New Delhi và TP.HCM - Mumbai",
         "correct": false
       },
       {
-        "text": "Bệnh lý di truyền",
+        "text": "Đà Nẵng - Bengaluru và Đà Nẵng - Hyderabad",
         "correct": false
       },
       {
-        "text": "Thiếu hụt hormone",
+        "text": "Hà Nội - Mumbai và Hà Nội - Ahmedabad",
         "correct": false
       }
     ]
@@ -2941,28 +2972,28 @@
     ]
   },
   {
-    "title": "Vietjet khai trương hai đường bay mới đến Ấn Độ",
-    "content": "Vietjet vừa khai trương hai đường bay mới đến Ấn Độ, cụ thể là từ TP.HCM đến Hyderabad và Bengaluru, nhằm đáp ứng nhu cầu di chuyển của người dân và du khách. Đường bay đến Hyderabad bắt đầu từ ngày 18-3-2025 với 2 chuyến khứ hồi mỗi tuần, trong khi đường bay đến Bengaluru khai trương từ 19-3-2025 với 3 chuyến khứ hồi mỗi tuần. Với sự kiện này, Vietjet nâng tổng số đường bay giữa Việt Nam và Ấn Độ lên 10, góp phần thúc đẩy giao lưu văn hóa và du lịch giữa hai nước.",
-    "link": "https://tuoitre.vn/vietjet-khai-truong-hai-duong-bay-moi-den-an-do-20250320145514184.htm",
-    "cat": "du-lich",
+    "title": "10 năm không con do dính buồng tử cung",
+    "content": "Chị Hà Thu, 33 tuổi, đã trải qua 10 năm không có con do dính buồng tử cung sau nhiều lần sảy thai và tác động phẫu thuật. Sau khi được chẩn đoán vô sinh thứ phát do dính buồng tử cung và tắc vòi trứng, chị đã trải qua ca phẫu thuật nội soi để cắt dính và điều trị. Cuối cùng, nhờ thụ tinh ống nghiệm, chị đã sinh con gái đầu lòng sau nhiều nỗ lực và gặp nhiều khó khăn trong thai kỳ.",
+    "link": "https://vnexpress.net/10-nam-khong-con-do-dinh-buong-tu-cung-4863585.html",
+    "cat": "suc-khoe",
     "positivity": 8,
-    "importance": 7,
-    "question": "Vietjet vừa khai trương đường bay mới nào đến Ấn Độ?",
+    "importance": 9,
+    "question": "Chị Hà Thu đã phải đối mặt với vấn đề gì trong suốt 10 năm không có con?",
     "answers": [
       {
-        "text": "TP.HCM - Hyderabad và TP.HCM - Bengaluru",
+        "text": "Dính buồng tử cung",
         "correct": true
       },
       {
-        "text": "TP.HCM - New Delhi và TP.HCM - Mumbai",
+        "text": "Vô sinh do tuổi tác",
         "correct": false
       },
       {
-        "text": "Đà Nẵng - Bengaluru và Đà Nẵng - Hyderabad",
+        "text": "Bệnh lý di truyền",
         "correct": false
       },
       {
-        "text": "Hà Nội - Mumbai và Hà Nội - Ahmedabad",
+        "text": "Thiếu hụt hormone",
         "correct": false
       }
     ]
@@ -3192,37 +3223,6 @@
     ]
   },
   {
-    "title": "Nguyên nhân gây tăng đường huyết sau ăn",
-    "content": "Sau khi ăn, lượng đường huyết tăng lên là điều bình thường do cơ thể phân hủy carbohydrate thành glucose. Tuy nhiên, việc ăn nhiều tinh bột, thực phẩm chế biến sẵn và không kiểm soát khẩu phần có thể dẫn đến tăng đường huyết đột ngột. Người bị tiểu đường cần chú ý đến thói quen ăn uống như chia nhỏ bữa ăn, chọn thực phẩm giàu chất xơ và kiểm soát lượng carbohydrate để duy trì mức đường huyết ổn định.",
-    "link": "https://vnexpress.net/nguyen-nhan-gay-tang-duong-huyet-sau-an-4863701.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Nguyên nhân nào gây tăng đường huyết sau khi ăn?",
-    "answers": [
-      {
-        "text": "Ăn quá nhiều tinh bột và thực phẩm chế biến sẵn",
-        "correct": true
-      },
-      {
-        "text": "Uống nước ngọt sau bữa ăn",
-        "correct": false
-      },
-      {
-        "text": "Bỏ bữa sáng",
-        "correct": false
-      },
-      {
-        "text": "Ăn thực phẩm nóng ngay sau khi nấu",
-        "correct": false
-      },
-      {
-        "text": "Vận động ngay sau khi ăn",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Học sinh ứng dụng công nghệ khai thác \"kho vàng\" dưới tán rừng",
     "content": "Nhóm học sinh tại Nghệ An đã phát triển một dự án khởi nghiệp ứng dụng công nghệ Blockchain và tiêu chuẩn GACP-WHO để khai thác nguồn dược liệu phong phú dưới tán rừng, được xem như \"kho vàng\" chưa được khai thác. Dự án không chỉ giúp minh bạch nguồn gốc dược liệu mà còn nâng cao giá trị sản phẩm và tạo sinh kế bền vững cho cộng đồng dân tộc thiểu số. Nhóm học sinh đã xuất sắc vượt qua vòng bán kết trong cuộc thi \"Học sinh, sinh viên với ý tưởng khởi nghiệp\" của Bộ Giáo dục và Đào tạo, góp phần bảo vệ môi trường và nâng cao nhận thức xã hội.",
     "link": "https://dantri.com.vn/giao-duc/hoc-sinh-ung-dung-cong-nghe-khai-thac-kho-vang-duoi-tan-rung-20250320080413977.htm",
@@ -3249,6 +3249,37 @@
       },
       {
         "text": "Cloud Computing",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Nguyên nhân gây tăng đường huyết sau ăn",
+    "content": "Sau khi ăn, lượng đường huyết tăng lên là điều bình thường do cơ thể phân hủy carbohydrate thành glucose. Tuy nhiên, việc ăn nhiều tinh bột, thực phẩm chế biến sẵn và không kiểm soát khẩu phần có thể dẫn đến tăng đường huyết đột ngột. Người bị tiểu đường cần chú ý đến thói quen ăn uống như chia nhỏ bữa ăn, chọn thực phẩm giàu chất xơ và kiểm soát lượng carbohydrate để duy trì mức đường huyết ổn định.",
+    "link": "https://vnexpress.net/nguyen-nhan-gay-tang-duong-huyet-sau-an-4863701.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Nguyên nhân nào gây tăng đường huyết sau khi ăn?",
+    "answers": [
+      {
+        "text": "Ăn quá nhiều tinh bột và thực phẩm chế biến sẵn",
+        "correct": true
+      },
+      {
+        "text": "Uống nước ngọt sau bữa ăn",
+        "correct": false
+      },
+      {
+        "text": "Bỏ bữa sáng",
+        "correct": false
+      },
+      {
+        "text": "Ăn thực phẩm nóng ngay sau khi nấu",
+        "correct": false
+      },
+      {
+        "text": "Vận động ngay sau khi ăn",
         "correct": false
       }
     ]
