Batch update of generated files

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,68 @@
     */
     const newsData = [
   {
+    "title": "Hojlund làm Ronaldo lu mờ ở tứ kết Nations League",
+    "content": "Trong trận tứ kết Nations League diễn ra vào ngày 20/3, Rasmus Hojlund đã ghi bàn duy nhất giúp Đan Mạch đánh bại Bồ Đào Nha 1-0. Hojlund tỏa sáng chỉ 10 phút sau khi vào sân, trong khi Cristiano Ronaldo thi đấu mờ nhạt và không có cú sút nào trúng đích. Đây là lần đầu tiên Đan Mạch thắng Bồ Đào Nha sau 14 năm, tạo lợi thế cho họ trước trận lượt về ở Lisbon.",
+    "link": "https://vnexpress.net/hojlund-lam-ronaldo-lu-mo-o-tu-ket-nations-league-4863973.html",
+    "cat": "the-thao",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Rasmus Hojlund đã làm gì trong trận tứ kết Nations League với Bồ Đào Nha?",
+    "answers": [
+      {
+        "text": "Ghi bàn duy nhất giúp Đan Mạch thắng",
+        "correct": true
+      },
+      {
+        "text": "Chấn thương và không thi đấu",
+        "correct": false
+      },
+      {
+        "text": "Được thay ra giữa trận",
+        "correct": false
+      },
+      {
+        "text": "Bị thẻ đỏ",
+        "correct": false
+      },
+      {
+        "text": "Ghi hai bàn thắng",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Cô gái ngưng tim ngưng thở sau dùng 'ma túy nước biển'",
+    "content": "Một cô gái 20 tuổi ở TP HCM đã bị ngưng tim ngưng thở sau khi sử dụng 'ma túy nước biển' (GHB) kết hợp với bia rượu trong một buổi tiệc. Cô được đưa vào bệnh viện cấp cứu trong tình trạng suy hô hấp và tím tái. Sau 12 giờ điều trị, cô đã hồi phục hoàn toàn mà không để lại di chứng thần kinh. Các bác sĩ cảnh báo rằng việc lạm dụng chất này có thể gây ra nhiều nguy hiểm cho sức khỏe, bao gồm cả ngộ độc và các vấn đề tâm thần.",
+    "link": "https://vnexpress.net/co-gai-ngung-tim-ngung-tho-sau-dung-ma-tuy-nuoc-bien-4863939.html",
+    "cat": "suc-khoe",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Cô gái ngưng tim sau khi dùng chất gì?",
+    "answers": [
+      {
+        "text": "ma túy nước biển",
+        "correct": true
+      },
+      {
+        "text": "cafe",
+        "correct": false
+      },
+      {
+        "text": "thuốc giảm đau",
+        "correct": false
+      },
+      {
+        "text": "thuốc an thần",
+        "correct": false
+      },
+      {
+        "text": "trà sữa",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Ôtô húc ngã người đi xe máy vì không giữ khoảng cách an toàn",
     "content": "Vào ngày 18/3 tại quận 5, TP HCM, một chiếc ôtô CX-5 đã húc vào một phụ nữ điều khiển xe máy do không giữ khoảng cách an toàn. Tình huống xảy ra khi người phụ nữ phanh lại để tránh va chạm với xe máy khác phía trước. Rất may, vụ va chạm không gây ra hậu quả nghiêm trọng. Bài viết nhấn mạnh tầm quan trọng của việc giữ khoảng cách an toàn và tập trung khi lái xe nhằm tránh tai nạn giao thông.",
     "link": "https://vnexpress.net/oto-huc-nga-nguoi-di-xe-may-vi-khong-giu-khoang-cach-an-toan-4863640.html",
@@ -560,64 +622,6 @@
     ]
   },
   {
-    "title": "Cán bộ bị tinh giản tập quen môi trường tư nhân",
-    "content": "Chị Nguyễn Thanh Tuyền, một viên chức nhà nước tại TP HCM, đã quyết định nghỉ việc để chuyển sang làm việc tại khu vực tư nhân sau khi cơ quan cô thực hiện Nghị quyết 18 về tinh gọn bộ máy. Tuy nhiên, chị cảm thấy bất ngờ vì yêu cầu tuyển dụng trong khu vực tư nhân thay đổi nhanh chóng và khó khăn hơn so với trước. Chị đã chủ động học hỏi và nâng cao kỹ năng để thích ứng với thị trường lao động mới, đồng thời nhận thấy rằng sự ổn định trong công việc không còn như trước. Chị Bùi Xuân Triều, một cựu viên chức khác, cũng chia sẻ rằng sự chuyển mình này tạo ra cơ hội mới và thách thức cho những người rời bỏ khu vực công.",
-    "link": "https://vnexpress.net/can-bo-bi-tinh-gian-tap-quen-moi-truong-tu-nhan-4863487.html",
-    "cat": "thoi-su",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Cán bộ nhà nước cần chuẩn bị gì khi chuyển sang làm việc ở khu vực tư nhân?",
-    "answers": [
-      {
-        "text": "Nâng cao kỹ năng và chuẩn bị tâm lý",
-        "correct": true
-      },
-      {
-        "text": "Chỉ cần gửi hồ sơ ứng tuyển",
-        "correct": false
-      },
-      {
-        "text": "Không cần học thêm gì",
-        "correct": false
-      },
-      {
-        "text": "Giữ nguyên tư duy làm việc như tại nhà nước",
-        "correct": false
-      },
-      {
-        "text": "Từ bỏ mọi cơ hội trong công việc",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Những 'kẻ thù' âm thầm gây hại sức khỏe dân văn phòng",
-    "content": "Bài viết đề cập đến những bệnh lý mà nhân viên văn phòng thường gặp phải do đặc thù công việc ít vận động và ngồi lâu. Các vấn đề sức khỏe như thừa cân, đau cổ vai gáy, đau lưng, trĩ, bệnh lý về mắt và viêm xoang được nhấn mạnh là những 'kẻ thù' âm thầm gây hại. Bác sĩ Trần Đức Cảnh khuyến cáo rằng việc duy trì chế độ ăn uống hợp lý, tập thể dục và thư giãn là cần thiết để giảm thiểu những rủi ro này.",
-    "link": "https://vnexpress.net/nhung-ke-thu-am-tham-gay-hai-suc-khoe-dan-van-phong-4862276.html",
-    "cat": "suc-khoe",
-    "positivity": 5,
-    "importance": 7,
-    "question": "Nhân viên văn phòng dễ mắc những bệnh gì?",
-    "answers": [
-      {
-        "text": "Thừa cân, đau cổ vai gáy, đau lưng",
-        "correct": true
-      },
-      {
-        "text": "Tiểu đường, ung thư, tim mạch",
-        "correct": false
-      },
-      {
-        "text": "Cúm, cảm lạnh, đau đầu",
-        "correct": false
-      },
-      {
-        "text": "Bệnh về da, bệnh về xương khớp",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Vướng tin đồn hẹn hò Kim Soo Hyun, dàn mỹ nhân Hàn nổi tiếng giờ ra sao?",
     "content": "Bài viết đề cập đến tình hình hiện tại của các mỹ nhân Hàn Quốc từng có liên quan đến Kim Soo Hyun sau khi tin đồn hẹn hò giữa anh và Kim Sae Ron rộ lên. Kim Ji Won đang thăng hoa trong sự nghiệp nhờ vai diễn trong bộ phim \"Nữ hoàng nước mắt\", trong khi Seo Ye Ji lại gặp khó khăn do bê bối cá nhân. Ngoài ra, IU và Bae Suzy cũng được nhắc đến với những thành công trong sự nghiệp của họ, bất chấp những tin đồn hẹn hò trước đó với Kim Soo Hyun.",
     "link": "https://dantri.com.vn/giai-tri/vuong-tin-don-hen-ho-kim-soo-hyun-dan-my-nhan-han-noi-tieng-gio-ra-sao-20250319002459238.htm",
@@ -702,6 +706,64 @@
       },
       {
         "text": "Chỉ tìm việc khi cần thiết.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Cán bộ bị tinh giản tập quen môi trường tư nhân",
+    "content": "Chị Nguyễn Thanh Tuyền, một viên chức nhà nước tại TP HCM, đã quyết định nghỉ việc để chuyển sang làm việc tại khu vực tư nhân sau khi cơ quan cô thực hiện Nghị quyết 18 về tinh gọn bộ máy. Tuy nhiên, chị cảm thấy bất ngờ vì yêu cầu tuyển dụng trong khu vực tư nhân thay đổi nhanh chóng và khó khăn hơn so với trước. Chị đã chủ động học hỏi và nâng cao kỹ năng để thích ứng với thị trường lao động mới, đồng thời nhận thấy rằng sự ổn định trong công việc không còn như trước. Chị Bùi Xuân Triều, một cựu viên chức khác, cũng chia sẻ rằng sự chuyển mình này tạo ra cơ hội mới và thách thức cho những người rời bỏ khu vực công.",
+    "link": "https://vnexpress.net/can-bo-bi-tinh-gian-tap-quen-moi-truong-tu-nhan-4863487.html",
+    "cat": "thoi-su",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Cán bộ nhà nước cần chuẩn bị gì khi chuyển sang làm việc ở khu vực tư nhân?",
+    "answers": [
+      {
+        "text": "Nâng cao kỹ năng và chuẩn bị tâm lý",
+        "correct": true
+      },
+      {
+        "text": "Chỉ cần gửi hồ sơ ứng tuyển",
+        "correct": false
+      },
+      {
+        "text": "Không cần học thêm gì",
+        "correct": false
+      },
+      {
+        "text": "Giữ nguyên tư duy làm việc như tại nhà nước",
+        "correct": false
+      },
+      {
+        "text": "Từ bỏ mọi cơ hội trong công việc",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Những 'kẻ thù' âm thầm gây hại sức khỏe dân văn phòng",
+    "content": "Bài viết đề cập đến những bệnh lý mà nhân viên văn phòng thường gặp phải do đặc thù công việc ít vận động và ngồi lâu. Các vấn đề sức khỏe như thừa cân, đau cổ vai gáy, đau lưng, trĩ, bệnh lý về mắt và viêm xoang được nhấn mạnh là những 'kẻ thù' âm thầm gây hại. Bác sĩ Trần Đức Cảnh khuyến cáo rằng việc duy trì chế độ ăn uống hợp lý, tập thể dục và thư giãn là cần thiết để giảm thiểu những rủi ro này.",
+    "link": "https://vnexpress.net/nhung-ke-thu-am-tham-gay-hai-suc-khoe-dan-van-phong-4862276.html",
+    "cat": "suc-khoe",
+    "positivity": 5,
+    "importance": 7,
+    "question": "Nhân viên văn phòng dễ mắc những bệnh gì?",
+    "answers": [
+      {
+        "text": "Thừa cân, đau cổ vai gáy, đau lưng",
+        "correct": true
+      },
+      {
+        "text": "Tiểu đường, ung thư, tim mạch",
+        "correct": false
+      },
+      {
+        "text": "Cúm, cảm lạnh, đau đầu",
+        "correct": false
+      },
+      {
+        "text": "Bệnh về da, bệnh về xương khớp",
         "correct": false
       }
     ]
@@ -2473,33 +2535,6 @@
     ]
   },
   {
-    "title": "HLV Đan Mạch: 'Ronaldo không còn đẳng cấp như trước'",
-    "content": "HLV đội tuyển Đan Mạch, Brian Riemer, đã nhận xét rằng Cristiano Ronaldo không còn đạt đẳng cấp như trước đây khi chuẩn bị cho trận đấu với Bồ Đào Nha tại tứ kết Nations League. Ông thừa nhận Ronaldo vẫn có những kỹ năng đáng nể nhưng đội hình Bồ Đào Nha vẫn sở hữu nhiều cầu thủ xuất sắc khác. Riemer khẳng định Đan Mạch sẽ phải phòng ngự chặt chẽ và tận dụng tối đa cơ hội trong trận đấu sắp tới.",
-    "link": "https://vnexpress.net/hlv-dan-mach-ronaldo-khong-con-dang-cap-nhu-truoc-4863692.html",
-    "cat": "the-thao",
-    "positivity": 5,
-    "importance": 7,
-    "question": "HLV Đan Mạch nghĩ gì về Ronaldo trước trận đấu với Bồ Đào Nha?",
-    "answers": [
-      {
-        "text": "Ronaldo không còn đẳng cấp như trước",
-        "correct": true
-      },
-      {
-        "text": "Ronaldo là cầu thủ xuất sắc nhất",
-        "correct": false
-      },
-      {
-        "text": "Ronaldo sẽ ghi nhiều bàn thắng",
-        "correct": false
-      },
-      {
-        "text": "Ronaldo là cầu thủ giỏi nhất thế giới",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "'Săn' cán bộ sau sắp xếp bộ máy",
     "content": "Bài viết đề cập đến xu hướng các doanh nghiệp tại TP.HCM 'săn' cán bộ sau khi sắp xếp bộ máy nhà nước, nhằm tận dụng kinh nghiệm và kỹ năng của họ. Doanh nghiệp sẵn sàng trả mức lương cao cho những cán bộ này để cải thiện hiệu quả hoạt động. Các chuyên gia cho rằng đây là một chiến lược thông minh trong bối cảnh khó khăn hiện tại, giúp doanh nghiệp thích ứng tốt hơn với thủ tục hành chính và nâng cao năng lực quản lý.",
     "link": "https://tuoitre.vn/san-can-bo-sau-sap-xep-bo-may-20250320140317875.htm",
@@ -2949,6 +2984,33 @@
     ]
   },
   {
+    "title": "10 năm không con do dính buồng tử cung",
+    "content": "Chị Hà Thu, 33 tuổi, đã trải qua 10 năm không có con do dính buồng tử cung sau nhiều lần sảy thai và tác động phẫu thuật. Sau khi được chẩn đoán vô sinh thứ phát do dính buồng tử cung và tắc vòi trứng, chị đã trải qua ca phẫu thuật nội soi để cắt dính và điều trị. Cuối cùng, nhờ thụ tinh ống nghiệm, chị đã sinh con gái đầu lòng sau nhiều nỗ lực và gặp nhiều khó khăn trong thai kỳ.",
+    "link": "https://vnexpress.net/10-nam-khong-con-do-dinh-buong-tu-cung-4863585.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Chị Hà Thu đã phải đối mặt với vấn đề gì trong suốt 10 năm không có con?",
+    "answers": [
+      {
+        "text": "Dính buồng tử cung",
+        "correct": true
+      },
+      {
+        "text": "Vô sinh do tuổi tác",
+        "correct": false
+      },
+      {
+        "text": "Bệnh lý di truyền",
+        "correct": false
+      },
+      {
+        "text": "Thiếu hụt hormone",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Viêm xoang có lây không?",
     "content": "Viêm xoang là tình trạng viêm các xoang cạnh mũi không phải là bệnh truyền nhiễm, do đó không lây từ người này sang người khác. Tuy nhiên, sống chung với người bị viêm xoang trong giai đoạn cấp tính có thể làm tăng nguy cơ lây nhiễm các tác nhân gây bệnh như virus hoặc vi khuẩn qua đường hô hấp. Để giảm nguy cơ nhiễm trùng, nên thực hiện các biện pháp phòng ngừa như rửa tay thường xuyên và tránh dùng chung đồ dùng cá nhân.",
     "link": "https://vnexpress.net/viem-xoang-co-lay-khong-4863754.html",
@@ -2998,33 +3060,6 @@
       },
       {
         "text": "Hà Nội - Mumbai và Hà Nội - Ahmedabad",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "10 năm không con do dính buồng tử cung",
-    "content": "Chị Hà Thu, 33 tuổi, đã trải qua 10 năm không có con do dính buồng tử cung sau nhiều lần sảy thai và tác động phẫu thuật. Sau khi được chẩn đoán vô sinh thứ phát do dính buồng tử cung và tắc vòi trứng, chị đã trải qua ca phẫu thuật nội soi để cắt dính và điều trị. Cuối cùng, nhờ thụ tinh ống nghiệm, chị đã sinh con gái đầu lòng sau nhiều nỗ lực và gặp nhiều khó khăn trong thai kỳ.",
-    "link": "https://vnexpress.net/10-nam-khong-con-do-dinh-buong-tu-cung-4863585.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Chị Hà Thu đã phải đối mặt với vấn đề gì trong suốt 10 năm không có con?",
-    "answers": [
-      {
-        "text": "Dính buồng tử cung",
-        "correct": true
-      },
-      {
-        "text": "Vô sinh do tuổi tác",
-        "correct": false
-      },
-      {
-        "text": "Bệnh lý di truyền",
-        "correct": false
-      },
-      {
-        "text": "Thiếu hụt hormone",
         "correct": false
       }
     ]
